# Sovereign-RAG-Gateway

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  funding.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-smoke.yml  eks-reference-validate.yml  evidence-replay-smoke.yml  ga-readiness.yml  release-verify.yml  release.yml  rollback-drill.yml  slo-reliability.yml  terraform-validate.yml  weekly-evidence-report.yml
app/: __init__.py  main.py  metrics.py
app/api/: routes.py
app/audit/: writer.py
app/budget/: __init__.py  tracker.py
app/config/: settings.py
app/core/: __init__.py  errors.py  logging.py
app/middleware/: auth.py  request_id.py
app/models/: openai.py
app/policy/: client.py  (+3 more)
scripts/: audit_replay_bundle.py  benchmark_runner.py  check_benchmark_thresholds.py  check_benchmark_trend.py  check_ga_release_gate.py  check_migration_v020rc1.py  check_release_assets.py  check_release_evidence_contract.py  check_required_workflows.py  check_slo_reliability.py  check_stabilization_window.py  check_version_sync.py  compose_smoke.sh  eks_reference_validate.sh  eval_citations.py  eval_pgvector_ranking.py  extract_release_notes.py  generate_release_evidence_artifacts.py  generate_release_verification_snapshot.py  generate_synthetic_healthcare_corpus.py  generate_weekly_evidence_report.py  provider_parity_matrix.py  rag_ingest.py  replay_webhook_dead_letter.py  run_fault_injection_suite.py  update_weekly_reports_index.py  validate_schemas.py
tests/: conftest.py
(+222 files in other folders)
